# MoturUI

./: .gitignore  CMakeLists.txt  MoturUI_en_GB.ts
.github/workflows/: c-cpp.yml
app/: main.cpp
forms/: MainWindow.ui
inc/interface/: ICommand.hpp  InterfaceManager.hpp
inc/mui/core/: Core.hpp  ICore.hpp
inc/mui/core/connection/: ConnectionManager.hpp  DBusBuilder.hpp  IDBusBuilder.hpp  NetworkManagerProxy.hpp
inc/mui/interface/: CoreCallbacks.hpp  InterfaceManager.hpp  ViewCallbacks.hpp
inc/mui/view/: AccessPointsComboBox.hpp  ConnectionButton.hpp  ConnectionStatusLed.hpp  ConnectionStatusText.hpp  MainWindow.hpp  UpdateAccessPointsButton.hpp  ViewManager.hpp  ViewState.hpp
inc/view/: ConnectionButton.hpp  ConnectionStatusLed.hpp  ConnectionStatusText.hpp  MainWindow.hpp  ViewManager.hpp
res/: resources.qrc  template_led.pskl..piskel
src/: CMakeLists.txt
src/interface/: CMakeLists.txt
src/mui/: CMakeLists.txt
src/mui/core/: CMakeLists.txt  Core.cpp
src/mui/core/connection/: ConnectionManager.cpp  DBusBuilder.cpp  NetworkManagerProxy.cpp
src/mui/interface/: CMakeLists.txt  InterfaceManager.cpp
src/mui/view/: AccessPointsComboBox.cpp  CMakeLists.txt  ConnectionButton.cpp  ConnectionStatusLed.cpp  ConnectionStatusText.cpp  MainWindow.cpp  UpdateAccessPointsButton.cpp  ViewManager.cpp
src/view/: CMakeLists.txt  ConnectionButton.cpp  ConnectionStatusLed.cpp  ConnectionStatusText.cpp  MainWindow.cpp  ViewManager.cpp
